packages/typ/tests/fixtures/diagnostics/0453_modules_record_manifest_mismatch_04.ml
module Q : sig
  type t = { value : bool }
  val x : t
end = struct
  type t = { value : int }
  let x = { value = 3 }
end
